--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
   },
   "dependencies": {
     "from": "~0.1.2",
-    "level-hooks": "~1.1.2",
     "through": "2.2.0"
   },
   "devDependencies": {
-    "levelup": "~0.6.0"
+    "levelup": "~0.6.0",
+    "level-sublevel": "~4.0.0"
   },
   "scripts": {
     "test": "set -e; for t in test/*.js; do node $t; done"
